Changed bg image on index.html as the contrast was an issue and I didn'tlike the way it looked. Also changed paragraph layout for that page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ nav {
 }
 
 main {
-    background-image: url(../images/waterfordquay_shutterstock.webp);
+    background-image: url(../images/waterford-bg-adobestock.webp);
     opacity: .9;
     background-color: #add8e6;
     background-size: cover;
@@ -88,40 +88,24 @@ main {
     color: #fff;
     text-shadow: 1px 1px 2px #000, 0 0 1em #000, 0 0 .2em #000;
     position: relative;
-    padding-top: 40px;
-    padding-left: 8px;
-    padding-right: 8px;
     margin-top: 1.5em;
     flex: 1 0 auto;
 }
 
 main p {
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-h2 {
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
-    font-size: 18px;
-    padding-bottom: 15px;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 #p1 {
     font-family: 'Roboto', sans-serif;
     text-align: center;
-    display: flex;
-    flex-direction: row;
-}
-
-#p2 {
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
-    display: flex;
+    /*Code on line 102 - 108 is from w3.org as I was having trouble getting paragraph to centre for viewport*/
+    padding: 1em;
     position: absolute;
-    bottom: 0;
-    margin: 8px;
-    padding-bottom: 10px;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
 }
 
 footer {
@@ -148,7 +132,7 @@ footer {
     main {
         padding-top: 70px;
         margin-top: 8px;
-        background-image: url(../images/waterfordquay_shutterstock.webp);
+        background-image: url(../images/waterford-bg-adobestock.webp);
         opacity: .9;
         background-color: #add8e6;
         background-position: center;
@@ -156,10 +140,6 @@ footer {
         background-repeat: no-repeat;
         letter-spacing: 2px;
         font-size: 12px
-    }
-
-    h2 {
-        font-size: 14px
     }
 }
 
@@ -181,10 +161,6 @@ footer {
         font-size: 28px
     }
 
-    h2 {
-        font-size: 26px
-    }
-
     main {
         font-size: 26px
     }
@@ -195,10 +171,6 @@ footer {
         font-size: 35px
     }
 
-    h2 {
-        font-size: 33px
-    }
-
     main {
         font-size: 33px
     }
@@ -207,10 +179,6 @@ footer {
 @media screen and (min-width:1280px) and (min-height:1000px) {
     h1 {
         font-size: 45px
-    }
-
-    h2 {
-        font-size: 43px
     }
 
     main {
